fixed/cleaned up code on html and css

--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -4,27 +4,21 @@
     --white: white;
     --black: #0C131D;
 }   
-
 /* || @ 1024px*/
 @media screen and (max-width: 1024px) {
-    /* || Body Styles */
+    /* || Body */
     body {max-width: 85%;}
-
-    /* || Hero Section */
+    /* || Homepage - Hero Section */
     .hero-section {
         height: 400px;
         text-align: center;
         justify-content: center;
         align-items: center;
     }
-
     .hero-item {width: 75%;}
-
     .hero-title {font-size: 25px;}
-
     .hero-item p {font-size: 15px;}
 }
-
 /* || @ 768px */
 @media screen and (max-width: 768px) {
     /* || Parallax */
@@ -32,30 +26,21 @@
         background-attachment: inherit;
         background-size: contain;
     }
-
     /* || Navbar */
-    .navbar-brand {
-        font-size: 20px;
-    }
-
+    .navbar-brand {font-size: 20px;}
     .navbar-collapse {
         width: 100%;
         padding: 15px;
         text-align: left;
     }
-
     .nav-item {
         text-align: center;
         padding: 5px 15px;
         border-radius: 10px;
         width: 100%;
     }
-
-    .navbar {
-        padding: 5px;
-    }
-
-    /* || Our Story Home Styles*/
+    .navbar {padding: 5px;}
+    /* || Homepage - Our Story */
     .column {
         height: 350px;
         width: 90%;
@@ -63,106 +48,68 @@
         padding: 10px;
         text-align: center;
     }
-
+    /* || Homepage - Contact Us */
     .section-subtitle {
         margin: 10px 0 0 75px;
         text-align: left !important;
     }
-
     .iframe-p {
         text-align: right;
         margin-right: 70px;
     }
-
     iframe {
         width: 75%;
         padding: 0;
     }
-
     form {
         width: 75%;
         margin: 0 auto;
     }
-
-    label {
-        text-align: left;
-    }
-
-    textarea {
-        height: 100px;
-    }
-
-    /* || About Us */
+    label {text-align: left;}
+    textarea {height: 100px;}
+    /* || About Us Page */
     .about-belief i {
         font-size: 8em;
         margin: 5px 0;
     }
 }
-
 /* || @ 425px */
 @media screen and (max-width: 425px) {
-    /* || Body Styles */
-    body {
-        max-width: 100%;
-    }
-
-    main {  
-        padding: 0;
-    }
-
-    /* || Homepage */
+    /* || Body & Main */
+    body {max-width: 100%;}
+    main {  padding: 0;}
+    /* || Homepage - Hero Section */
     .hero-item {
         width: 90%;
         margin: 30px auto;
     }
-
-    /* || Contact */
-    iframe {
-        width: 90%;
-    }
-
-    form {
-        width: 90%;
-    }
-
+    /* || Homepage - Contact Us */
+    iframe {width: 90%;}
+    form {width: 90%;}
     .iframe-p {
         text-align: right;
         margin-right: 20px;
     }
-
     .section-subtitle {
         margin: 10px 0 0 20px;
         text-align: left !important;
     }
-
-    /* || Menu */
+    /* || Product Page */
     .menu-container {
         padding: 10px;
         border-radius: 5px;
         border: 10px double var(--pink);
     }
-    
-    .menu-title {
-        font-size: 20px;
-    }
-    
+    .menu-title {font-size: 20px;}
     .menu-item {
         width: 100%;
         border-bottom: 2px dotted var(--black);
     }
-    
-    .item-name, .item-price {
-        font-size: 15px;
-    }
-
-    /* || About */
-    .about-info p, .about-values-p {
-        width: 90%;
-    }
-
+    .item-name, .item-price {font-size: 15px;}
+    /* || About Us Page */
+    .about-info p, .about-values-p {width: 90%;}
     .about-belief i {
         font-size: 6em;
         margin: 5px 0;
     }
-
 }
